tests/ui/async-await/in-trait/fn-not-async-err2.next.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in `impl` method return types
  --> $DIR/fn-not-async-err2.rs:15:22
   |
LL |     fn foo(&self) -> impl Future<Output = i32> {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/crablang/crablang/issues/91611> for more information
   = help: add `#![feature(return_position_impl_trait_in_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0562`.
